<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PantallaUnirsePartida">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/fondoinicioapp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="vertical">


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/nombreUsuarioEtiqueta"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:text="@string/nombre_jugador"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombreUsuario"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:textColor="?android:textColorPrimary"
                android:text="" />

            <TextView
                android:id="@+id/edadEtiqueta"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:text="@string/edad_jugador"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edadJugador"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:textColor="?android:textColorPrimary"
                android:text=""/>

            <TextView
                android:id="@+id/generoEtiqueta"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:text="@string/genero_jugador"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/eleccionGenero"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:popupBackground="@color/white"/>

            <TextView
                android:id="@+id/numeroSalaEtiqueta"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:text="@string/numeroSala"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numeroSala"
                android:layout_width="138dp"
                android:layout_height="50dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:textColor="?android:textColorPrimary"
                android:text=""/>
        </GridLayout>



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonJugar"
        android:layout_width="144dp"
        android:layout_height="47dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:background="@drawable/rock_button"
        android:text="@string/botonJugar"
        android:textColor="?android:textColorPrimary" />


</FrameLayout>