<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial4PopUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/madera_pixel"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/pergamino"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingBottom="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/texto1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/tutorial4Texto1"
                    android:textColor="@color/black"
                    android:textSize="34dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/texto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/tutorial4Texto2"
                    android:textColor="@color/black"
                    android:textSize="34dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/texto3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/tutorial4Texto3"
                    android:textColor="@color/black"
                    android:textSize="34dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/texto4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/tutorial4Texto4"
                    android:textColor="@color/black"
                    android:textSize="34dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/texto5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/tutorial4Texto5"
                    android:textColor="@color/black"
                    android:textSize="34dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>